--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 ctx.font = `${mobile ? 24 : 48}px Arial`;
                 ctx.fillStyle = `hsl(${hue}, 100%, 60%)`;
                 ctx.textAlign = "center";
-                ctx.fillText("Anh yêu em bé iu tha lỗi cho anh nha", width / 2, height / 2);
+                ctx.fillText("Bé iu tha lỗi cho anh nha", width / 2, height / 2);
 
                 window.requestAnimationFrame(loop, canvas);
             };
